client/src/App.css
.App {
  text-align: center;
  font-size: calc(10px + 2vmin);
  width: 60%;
  margin-left: auto;
  margin-right: auto;
}

div.tab-pane.active {
  border: 1px solid transparent;
  border-bottom-left-radius: .25rem;
  border-color: #dee2e6 #dee2e6;
  border-bottom-right-radius: .25rem;

  padding: 0.5em;
}

a#package-tabs-tab-active {
  color: #155724;
}

a#package-tabs-tab-active:hover {
  background-color: #ebf7ee;
  border-bottom-color:#0b2e13;
}

a#package-tabs-tab-active.active {
  color: #155724;
  background-color: #d4edda;
  border-color: #c3e6cb;
  border-bottom-color:#0b2e13;
}

a#package-tabs-tab-archived {
  color: #856404;
}

a#package-tabs-tab-archived:hover {
  background-color: #fdf6e0;
  border-bottom-color:#533f03;
}

a#package-tabs-tab-archived.active {
  color: #856404;
  background-color: #fff3cd;
  border-color: #ffeeba;
  border-bottom-color:#533f03;
}

#updateButton, #github-btn {
  margin-bottom:1em;
}

#alert-row {
  font-size: medium;
}

@media only screen and (min-width: 300px) {
  .App {
    width: 80%;
  }

  /* input {
    width: 100%
  } */

}

@media only screen and (min-width: 640px) {
  .App {
    width: 80%;
  }

  /* input {
    width: 50%;
  } */

}

.detail-cell {
  line-height: 1rem;
  white-space: pre-wrap;
  max-width: 16vw;
}

/* responsive styling for top input area and package list table */
@media only screen and (max-width: 830px) {
  .App {
    width: 80%;
  }

  /* Carrier button and container */
  #input-group-div > .input-group-prepend {
    width: 100%;
  }

  button#input-group-dropdown-1 {
    width: 100%;
    border-radius: unset;
  }

  /* "Tracking number" input */
  input#trackingNumberInput {
    width: 100%;
    text-align: center;
  }

  /* "Description" input and container */
  div#description-input-group-append {
    width: 100%;
  }

  input#description-input {
    text-align: center;
    width: 100%;
  }

  /* "Add package" button and container */
  div#add-package-input-group {
    width: 100%
  }

  button#add-package-btn {
    width: 100%;
    border-radius: unset;
  }

  td, tr, th {
    display: block;
    width: 100%;
  }

  .detail-cell {
    max-width: unset;
  }

  .update-one-btn, .archive-btn {
    width: 50%;
  }
}

.footer {
  border-top: 1px solid #eee;
  position: fixed;
  width: 100%;
  bottom: 0;
  left: 0;
  color: #999;
  margin-left: auto;
  margin-right: auto;
  font-size: small;
}
.footer > p {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

